[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/actors/enemies/eye/eye.gd" type="Script" id=1]
[ext_resource path="res://assets/actors/enemies/eye/eye.png" type="Texture" id=2]
[ext_resource path="res://assets/actors/enemies/eye/eye-silhouette.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/hit.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/eye-gun-fire.ogg" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 7.25771

[sub_resource type="Animation" id=2]
resource_name = "eye-fire"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="eye" type="KinematicBody2D" groups=[
"enemies",
]]
collision_mask = 2
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 6

[node name="silhouette" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="projectileTimer" type="Timer" parent="."]

[node name="animationPlayer" type="AnimationPlayer" parent="."]
anims/eye-fire = SubResource( 2 )

[node name="tween" type="Tween" parent="."]

[node name="enemyRay" type="RayCast2D" parent="."]
scale = Vector2( 1, 5 )
enabled = true
cast_to = Vector2( 16, 0 )

[node name="hitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="fireAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="moveTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true
[connection signal="timeout" from="projectileTimer" to="." method="_on_projectileTimer_timeout"]
[connection signal="animation_finished" from="animationPlayer" to="." method="_on_animationPlayer_animation_finished"]
